--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,7 +21,9 @@ set(PROJECT_SOURCES
 		./FEM/Elements/Element.cpp
 		./FEM/Elements/E2D/Element2D.cpp
 		./FEM/Elements/E2D/LTriangular.cpp
+		./FEM/Elements/E2D/Serendipity.cpp
 		./FEM/Elements/E2D/TriangularScheme.cpp
+		./FEM/Elements/E2D/RectangularScheme.cpp
 		./FEM/Utils/Utils.cpp)
 
 set(PROJECT_HEADERS
