--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,6 +23,7 @@ set(PROJECT_SOURCES
 		./FEM/Elements/Element.cpp
 		./FEM/Elements/E2D/Element2D.cpp
 		./FEM/Elements/E2D/LTriangular.cpp
+		./FEM/Elements/E2D/QTriangular.cpp
 		./FEM/Elements/E2D/Serendipity.cpp
 		./FEM/Elements/E2D/Quadrilateral.cpp
 		./FEM/Elements/E2D/TriangularScheme.cpp
